database/mariadb/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
    name: mariadb
  name: mariadb
  namespace: mariadb
spec:
  ports:
    - name: 3306-3306
      port: 3306
      protocol: TCP
      targetPort: 3306
  ClusterIP: none    
  selector:
    app: mariadb
  #LB if required  
  type: ClusterIP
