database/mariadb/mariadb-nwpol-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: retrieval-access
spec:
  podSelector:
    matchLabels:
      app: mariadb
  #egress traffic to fe and be
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["frontend", "backend"]
    ports:
    - protocol: TCP
      port: 3306
