database/mariadb/mariadb-nwpol-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-spring-boot-mariadb-access
  namespace: mariadb
spec:
  podSelector:
    matchLabels:
      app: mariadb
  policyType:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: backend
    ports:
    - protocol: TCP
      port: 3306
